[package]
authors = ["cwl <773622153@qq.com>"]
edition = "2018"
name = "leetcode"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assign_cookies = {path = "./crates/algorithm/greedy/assign_cookies"}
best_time_to_buy_and_sell_stock_IV = {path = "./crates/algorithm/dynamic_programming/best_time_to_buy_and_sell_stock_IV"}
binary_tree_zigzag_level_order_traversal = {path = "./crates/data_structure/tree/binary_tree_zigzag_level_order_traversal"}
buy_sell_stock_with_transction_fee = {path = "./crates/algorithm/dynamic_programming/buy_sell_stock_with_transction_fee"}
candy = {path = "./crates/not_archived/hard/candy"}
contains_duplicate = {path = "./crates/not_archived/easy/contains_duplicate"}
dota2_senate = {path = "./crates/data_structure/deque/dota2_senate"}
find_the_difference = {path = "./crates/not_archived/easy/find_the_difference"}
first_unique_character_in_a_string = {path = "./crates/not_archived/easy/first_unique_character_in_a_string"}
group_anagrams = {path = "./crates/not_archived/middle/group_anagrams"}
isomorphic_strings = {path = "./crates/not_archived/easy/isomorphic_strings"}
lazy_static = "1.4.0"
lemonade_change = {path = "./crates/algorithm/greedy/lemonade_change"}
maximal_rectangle = {path = "./crates/not_archived/hard/maximal_rectangle"}
min_cost_climbing_stairs = {path = "./crates/algorithm/dynamic_programming/min_cost_climbing_stairs"}
monotone_increasing_digits = {path = './crates/algorithm/greedy/monotone_increasing_digits'}
patching_array = {path = "./crates/algorithm/greedy/patching_array"}
remove_duplicate_letters = {path = "./crates/data_structure/stack/remove_duplicate_letters"}
roman_to_integer = {path = "./crates/not_archived/easy/roman_to_integer"}
rotate_image = {path = "./crates/not_archived/middle/rotate_image"}
rotate_list = {path = "./crates/data_structure/list/rotate_list"}
serialize_and_deserialize_binary_tree = {path = "./crates/data_structure/tree/serialize_and_deserialize_binary_tree"}
split_array_into_fibonacci_sequence = {path = "./crates/algorithm/search/backtrack/split_array_into_fibonacci_sequence"}
unique_paths = {path = "./crates/algorithm/dynamic_programming/unique_paths"}
wiggle_sequence = {path = "./crates/algorithm/dynamic_programming/wiggle_sequence"}
word_pattern = {path = "./crates/not_archived/easy/word_pattern"}
